fix the alignment issue in room name

--- a/public/css/board.css
+++ b/public/css/board.css
@@ -194,10 +194,10 @@
 
 .round-info {
     float: left;
-    width: 100px;
     font-family: "Comic Sans MS", cursive, sans-serif;
     color: white;
 }
+
 
 .choosen-word {
     text-align: center;
